--- a/nightclub-wrapped-app/src/app/Home.module.css
+++ b/nightclub-wrapped-app/src/app/Home.module.css
@@ -1,3 +1,55 @@
+.main {
+  display: flex;
+  justify-content: center;
+  min-height: 100vh; 
+  flex-direction: column;
+  align-items: center;
+  background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
+  --tw-gradient-from: #1e293b var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(30 41 59 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+  --tw-gradient-to: #111827 var(--tw-gradient-to-position);
+}
+
+.main-content-box {
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  align-items: center;
+  background-clip: text;
+  color: transparent;
+  width: 100%;
+  max-width: 64rem;
+  padding: 2rem 1rem;
+}
+
+.title {
+  margin-bottom: 1.5rem;
+  font-size: 3rem /* 48px */;
+  line-height: 1;
+  font-weight: 700;
+  text-align: center;
+  background-clip: text;
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
+  --tw-gradient-from: #60a5fa var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(96 165 250 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+  --tw-gradient-to: #9333ea var(--tw-gradient-to-position);
+  .md\:mb-8 {
+    margin-bottom: 2rem;
+  }
+  .md\:text-6xl {
+    font-size: 3.75rem;
+    line-height: 1;
+  }
+  .md\:text-6xl {
+    font-size: 3.75rem;
+    line-height: 1;
+  }
+}
+
+
+
 .dropdown_list {
   /* color: black; */
   /* margin-top: 10px; */
@@ -23,6 +75,36 @@
 
 .tag_input {
   width: 100%;
+}
+
+.input_box {
+  display: flex;
+  height: 2.5rem;
+  border-radius: 0.375rem;
+  border-width: 1px;
+  padding: 1rem 0.5rem;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+    --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  width: 100%;
+  --tw-border-opacity: 1;
+  border-color: rgb(55 65 81 / var(--tw-border-opacity, 1)) /* #374151 */;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1)) /* #ffffff */;    --tw-bg-opacity: 1;
+  background-color: rgb(31 41 55 / var(--tw-bg-opacity, 1)) /* #1f2937 */;
+}
+
+.link {
+  padding: .75rem 1.5rem;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+  border-radius: 0.5rem;
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+  font-weight: 600;
+  z-index: 0;
 }
 
 /* border - #e5e7eb */
