--- a/nightclub-wrapped-app/src/app/Home.module.css
+++ b/nightclub-wrapped-app/src/app/Home.module.css
@@ -1,7 +1,7 @@
 .main {
   display: flex;
   justify-content: center;
-  min-height: 100vh; 
+  min-height: 100vh;
   flex-direction: column;
   align-items: center;
   background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
@@ -18,7 +18,6 @@
   align-items: center;
   background-clip: text;
   color: transparent;
-  width: 100%;
   max-width: 64rem;
   padding: 2rem 1rem;
 }
@@ -48,8 +47,6 @@
   }
 }
 
-
-
 .dropdown_list {
   /* color: black; */
   /* margin-top: 10px; */
@@ -63,9 +60,9 @@
 
 .dropdown_listitem {
   padding-left: 0.5rem;
-  padding-right: 0.5rem;
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+  padding-right: 1rem;
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
   cursor: pointer;
   z-index: 1;
 }
@@ -86,18 +83,20 @@
   font-size: 1rem;
   line-height: 1.5rem;
   --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
-    --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
-    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
+    var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
   width: 100%;
   --tw-border-opacity: 1;
   border-color: rgb(55 65 81 / var(--tw-border-opacity, 1)) /* #374151 */;
   --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity, 1)) /* #ffffff */;    --tw-bg-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1)) /* #ffffff */;
+  --tw-bg-opacity: 1;
   background-color: rgb(31 41 55 / var(--tw-bg-opacity, 1)) /* #1f2937 */;
 }
 
 .link {
-  padding: .75rem 1.5rem;
+  padding: 0.75rem 1.5rem;
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
   border-radius: 0.5rem;
